myK8S/actual-budget/actual-budget-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: actual-budget
  namespace: personal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: actual-budget
  template:
    metadata:
      labels:
        app: actual-budget
    spec:
      containers:
        - name: actual-budget
          image: actualbudget/actual-server:latest
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              memory: 256Mi
          imagePullPolicy: Always
          ports:
            - containerPort: 5006
          volumeMounts:
            - name: actual-budget-storage
              mountPath: /data
      volumes:
        - name: actual-budget-storage
          persistentVolumeClaim:
            claimName: actual-budget-pvc
