myK8S/actual-budget/actual-budget-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: actual-budget-service
  namespace: personal
spec:
  type: ClusterIP
  selector:
    app: actual-budget
  ports:
    - name: http
      port: 5006
      targetPort: 5006
